--- a/sass/main.scss
+++ b/sass/main.scss
@@ -38,6 +38,9 @@ body {
   color: #0f172a;
   line-height: 150%;
   font-size: 16px;
+  &.no-scroll {
+    overflow: hidden;
+  }
 }
 .wrapper {
   overflow: hidden;
@@ -189,6 +192,9 @@ section {
     display: flex;
     align-items: center;
     justify-content: space-between;
+  }
+  .media-block-el {
+    display: none;
   }
   &__left {
     display: flex;
@@ -421,6 +427,13 @@ section {
       border-radius: 16px;
       width: 199px;
       box-shadow: 0px 40px 80px 0px #1b3b700f;
+      img {
+        position: absolute;
+        top: -9px;
+        left: 28px;
+        width: 20px;
+        height: 17px;
+      }
       p {
         font-weight: 400;
         font-size: 15px;
@@ -1784,7 +1797,11 @@ section {
     gap: 10px;
   }
 }
-@media (max-width: 1230px) {
+@media (max-width: 1200px) {
+  .footer__top {
+    grid-template-columns: auto auto auto auto;
+    gap: 20px;
+  }
 }
 @media (max-width: 1140px) {
   .successful__cases-top {
@@ -1792,6 +1809,12 @@ section {
   }
   .successful__cases-top-img {
     width: 100%;
+  }
+  .faq .title {
+    width: 400px;
+  }
+  .faq .container {
+    gap: 20px;
   }
 }
 @media (max-width: 1110px) {
@@ -1853,6 +1876,37 @@ section {
     .blue-btn,
     .header__left-info {
       display: none;
+    }
+    .media-block-el {
+      display: grid;
+      grid-template-columns: 1fr 50px;
+      width: 100%;
+      padding: 16px;
+      gap: 12px;
+      position: absolute;
+      top: 78%;
+      left: 0;
+      z-index: 10000;
+      & > * {
+        display: flex !important;
+      }
+      .blue-btn {
+        grid-column: span 2;
+        justify-content: center;
+      }
+      .header__right-phone {
+        height: 50px;
+        padding: 4px;
+        gap: 16px;
+      }
+      .header__right-phone span {
+        font-size: 16px;
+      }
+      .header__right-phone .img-box {
+        width: 42px;
+        height: 42px;
+        background-color: #f2f7fd;
+      }
     }
   }
 
@@ -1943,6 +1997,23 @@ section {
   .cta__content {
     max-width: 100%;
   }
+  .faq .container {
+    flex-direction: column;
+    gap: 32px;
+    .title {
+      width: 100%;
+      margin-bottom: 0;
+    }
+  }
+  .cta-two .cta__content-form {
+    margin-top: 658px;
+  }
+  .cta-two .cta__img {
+    top: 150px;
+  }
+  .footer__top {
+    grid-template-columns: auto auto auto;
+  }
 }
 @media (max-width: 768px) {
   .trust-us__boxes {
@@ -2026,6 +2097,33 @@ section {
       padding: 0;
     }
   }
+  .our-team {
+    padding: 80px 0;
+    margin: 0;
+    border-radius: 40px;
+    .swiper {
+      padding-bottom: 50px;
+    }
+  }
+  .cta.cta-two {
+    background: url(../images/media-bg-3.png) no-repeat !important;
+    background-size: cover !important;
+    .cta__content-title {
+      height: 130px;
+    }
+  }
+  .cta-two .cta__content-form {
+    margin-top: 410px;
+  }
+  .cta-two .cta__img {
+    height: 500px;
+  }
+  .cta-two .cta__img .quote-box {
+    bottom: 135px;
+  }
+  .footer__top {
+    grid-template-columns: auto auto;
+  }
 }
 @media (max-width: 700px) {
   .prices .price-card {
@@ -2096,12 +2194,41 @@ section {
     border-radius: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     margin-top: 0;
     background: #fff;
     z-index: 999;
     flex-direction: column;
     display: none;
+    &.show {
+      display: flex;
+    }
+  }
+  .header__bottom .dropdown:hover .chevron-down {
+    transform: none;
+  }
+  .header__bottom .dropdown:hover .chevron-down path {
+    stroke: #94a3b8;
+  }
+  .header {
+    .dropdown__head {
+      &.active {
+        svg {
+          transform: rotate(180deg) !important;
+          path {
+            stroke: #1a89f9 !important;
+          }
+        }
+      }
+    }
+    .dropdown {
+      .dropdown__options {
+        border-radius: 0;
+        &.show {
+          display: flex;
+        }
+      }
+    }
   }
   .header__bottom-item {
     flex: none;
@@ -2139,11 +2266,6 @@ section {
     padding: 0;
     width: fit-content;
     color: #64748b;
-  }
-  .header__bottom .dropdown:hover .chevron-down {
-    path {
-      stroke: #1a89f9;
-    }
   }
   .header {
     margin: 0 0 40px 0;
@@ -2598,7 +2720,166 @@ section {
       }
     }
   }
-  .prices .price-card.active{
+  .prices .price-card.active {
     border: none;
+  }
+  .system-approach__card-head {
+    padding: 20px;
+  }
+  .system-approach__card-title {
+    font-size: 18px;
+  }
+  .system-approach__card-head .badge {
+    font-size: 14px;
+  }
+  .system-approach__card-list {
+    padding: 20px;
+  }
+  .system-approach__card-list li {
+    gap: 12px;
+  }
+  .system-approach__card-list .info .status-box {
+    font-size: 14px;
+  }
+  .system-approach {
+    .swiper-btns {
+      display: none;
+    }
+  }
+  .system-approach .swiper {
+    padding-bottom: 40px;
+    .swiper-pagination {
+      display: block;
+    }
+  }
+  .additional__services .title {
+    font-size: 22px;
+    margin-bottom: 32px;
+  }
+  .additional__services-card-head {
+    padding: 20px;
+  }
+  .additional__services-card-body {
+    padding: 20px;
+  }
+  .additional__services-cards {
+    grid-template-columns: 1fr;
+    gap: 32px;
+  }
+  .additional__services-card a {
+    font-size: 15px;
+    padding-left: 16px;
+  }
+  .additional__services-card a div {
+    width: 44px;
+    height: 44px;
+  }
+  .faq .accordion.active {
+    padding: 20px;
+  }
+  .faq .accordion-header__title {
+    font-size: 16px;
+  }
+  .faq .accordion-content__info {
+    font-size: 14px;
+  }
+  .faq .accordion-header {
+    align-items: start;
+    img {
+      margin-top: 7px;
+    }
+  }
+  .info-sec .container h3 {
+    font-size: 22px;
+  }
+  .info-sec .container {
+    gap: 32px;
+  }
+  .info-sec__box h4 {
+    font-size: 16px;
+  }
+  .info-sec .btn-outline {
+    width: 100%;
+    text-align: center;
+    height: 50px;
+  }
+  .footer__top {
+    grid-template-columns: 1fr;
+    gap: 0;
+  }
+  .footer {
+    .logo-box {
+      display: flex;
+      align-items: center;
+      gap: 32px;
+      margin-bottom: 32px;
+      img {
+        width: 123px;
+        height: 40px;
+      }
+    }
+  }
+  .footer__top .logo-box h4 {
+    margin-top: 0;
+    font-size: 16px;
+  }
+  .footer__top .head {
+    margin: 0;
+    padding: 12px 6px 12px 0;
+    border-bottom: 1px solid #e2e8f0;
+  }
+  .footer__top .head svg {
+    display: block;
+    height: 13px;
+  }
+  .footer__top ul,
+  .footer__top .social {
+    display: none;
+  }
+  .footer__bottom {
+    margin-top: 32px;
+    flex-direction: column;
+    gap: 16px;
+    align-items: start;
+    padding-top: 32px;
+    .links {
+      flex-direction: column;
+      gap: 32px;
+    }
+  }
+  .footer__top-box {
+    &.active {
+      .head {
+        margin-bottom: 24px;
+        svg {
+          transform: rotate(90deg);
+          path {
+            stroke: #1a89f9;
+          }
+        }
+      }
+      ul,
+      .social {
+        display: flex;
+      }
+    }
+  }
+  .footer__top-box.active ul,
+  .footer__top-box.active .social {
+    gap: 24px;
+  }
+  .hero__img .quote-box img {
+    left: 16px;
+  }
+  .header {
+    transition: all .2s linear;
+    &.fixed {
+      position: fixed;
+      width: 100%;
+      z-index: 9999;
+      backdrop-filter: blur(60px);
+      box-shadow: 0px 10px 20px 0px #1b3b700a;
+      background: #FFFFFFCC;
+    }
   }
 }
