--- a/css/main.css
+++ b/css/main.css
@@ -329,6 +329,10 @@ ol {
   margin: 0;
 }
 
+p {
+  line-height: 150%;
+}
+
 a,
 span {
   display: inline-block;
@@ -720,6 +724,9 @@ section {
 .hero__content .enter__phone input::placeholder {
   color: #64748b;
 }
+.hero .blue-btn {
+  white-space: nowrap;
+}
 .hero__img {
   max-width: 724px;
   position: relative;
@@ -1040,6 +1047,7 @@ section {
 .successful__cases-top .company-logo {
   width: 136px;
   height: 136px;
+  padding-inline: 8px;
   background-color: #fff;
   border-radius: 16px;
   display: flex;
@@ -1851,6 +1859,12 @@ section {
   flex-direction: column;
   gap: 20px;
 }
+.info-sec .hide-info {
+  display: none;
+}
+.info-sec .hide-info.show {
+  display: block;
+}
 .info-sec__box h4 {
   font-weight: 700;
   font-size: 22px;
@@ -2205,6 +2219,81 @@ section {
   .footer__top {
     grid-template-columns: auto auto auto;
   }
+  .header__bottom {
+    position: fixed;
+    top: 72px;
+    border-radius: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    margin-top: 0;
+    background: #fff;
+    z-index: 999;
+    flex-direction: column;
+    display: none;
+  }
+  .header__bottom.show {
+    display: flex;
+  }
+  .header__bottom .dropdown:hover .chevron-down {
+    transform: none;
+  }
+  .header__bottom .dropdown:hover .chevron-down path {
+    stroke: #94a3b8;
+  }
+  .header__bottom-item {
+    flex: none;
+    padding: 16px;
+    height: unset;
+    border-bottom: 1px solid #f1f5f9;
+    justify-content: start;
+    border-radius: 0;
+    color: #334155 !important;
+  }
+  .header__bottom-item:hover {
+    background: transparent;
+  }
+  .header__bottom-item.dropdown {
+    flex-direction: column;
+  }
+  .header__bottom-item.dropdown .dropdown__head {
+    width: 100%;
+    justify-content: space-between;
+  }
+  .header__bottom-item .dropdown__options {
+    position: unset;
+    opacity: 1;
+    visibility: visible;
+    padding: 16px 32px 16px 16px;
+    text-align: left;
+    min-width: 100%;
+    box-shadow: none;
+    display: none;
+    flex-direction: column;
+    transform: none;
+    gap: 16px;
+  }
+  .header__bottom .dropdown__options-item {
+    padding: 0;
+    width: fit-content;
+    color: #64748b;
+  }
+  .header .dropdown__head.active svg {
+    transform: rotate(180deg) !important;
+  }
+  .header .dropdown__head.active svg path {
+    stroke: #1a89f9 !important;
+  }
+  .header .dropdown .dropdown__options {
+    border-radius: 0;
+  }
+  .header .dropdown .dropdown__options.show {
+    display: flex;
+  }
+  .header {
+    margin: 0 0 40px 0;
+    padding: 10px 0;
+  }
 }
 @media (max-width: 768px) {
   .trust-us__boxes {
@@ -2380,79 +2469,7 @@ section {
     height: 14px;
   }
   .header__bottom {
-    position: fixed;
     top: 56px;
-    border-radius: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    margin-top: 0;
-    background: #fff;
-    z-index: 999;
-    flex-direction: column;
-    display: none;
-  }
-  .header__bottom.show {
-    display: flex;
-  }
-  .header__bottom .dropdown:hover .chevron-down {
-    transform: none;
-  }
-  .header__bottom .dropdown:hover .chevron-down path {
-    stroke: #94a3b8;
-  }
-  .header .dropdown__head.active svg {
-    transform: rotate(180deg) !important;
-  }
-  .header .dropdown__head.active svg path {
-    stroke: #1a89f9 !important;
-  }
-  .header .dropdown .dropdown__options {
-    border-radius: 0;
-  }
-  .header .dropdown .dropdown__options.show {
-    display: flex;
-  }
-  .header__bottom-item {
-    flex: none;
-    padding: 16px;
-    height: unset;
-    border-bottom: 1px solid #f1f5f9;
-    justify-content: start;
-    border-radius: 0;
-    color: #334155 !important;
-  }
-  .header__bottom-item:hover {
-    background: transparent;
-  }
-  .header__bottom-item.dropdown {
-    flex-direction: column;
-  }
-  .header__bottom-item.dropdown .dropdown__head {
-    width: 100%;
-    justify-content: space-between;
-  }
-  .header__bottom-item .dropdown__options {
-    position: unset;
-    opacity: 1;
-    visibility: visible;
-    padding: 16px 32px 16px 16px;
-    text-align: left;
-    min-width: 100%;
-    box-shadow: none;
-    display: none;
-    flex-direction: column;
-    transform: none;
-    gap: 16px;
-  }
-  .header__bottom .dropdown__options-item {
-    padding: 0;
-    width: fit-content;
-    color: #64748b;
-  }
-  .header {
-    margin: 0 0 40px 0;
-    padding: 10px 0;
   }
   .hero__content-info {
     margin-bottom: 32px;
@@ -2548,6 +2565,8 @@ section {
   .promotions .blue-btn-media-block {
     display: flex;
     height: 60px;
+    width: 100%;
+    justify-content: center;
   }
   .promotions__list-item {
     height: 44px;
@@ -2700,7 +2719,7 @@ section {
     height: 48px;
   }
   .cta__content-title {
-    height: 62px;
+    min-height: 62px;
   }
   .cta__img {
     width: 360px;
