--- a/sass/main.scss
+++ b/sass/main.scss
@@ -409,7 +409,7 @@ section {
       height: 68px;
       margin-top: 40px;
       input {
-        flex: 1;
+        width: 100%;
         height: 100%;
         padding-left: 20px;
         &::placeholder {
@@ -1528,6 +1528,9 @@ section {
   margin: 0 20px;
   border-radius: 40px;
   padding: 80px 0;
+  .swiper-pagination {
+    display: none;
+  }
   &-swiper {
     .swiper-slide {
       position: relative;
@@ -2111,6 +2114,14 @@ section {
     margin: 0 0 40px 0;
     padding: 10px 0;
   }
+  .our-team {
+    .swiper {
+      padding-bottom: 50px;
+    }
+    .swiper-pagination {
+      display: block;
+    }
+  }
 }
 @media (max-width: 768px) {
   .trust-us__boxes {
@@ -2198,9 +2209,7 @@ section {
     padding: 80px 0;
     margin: 0;
     border-radius: 40px;
-    .swiper {
-      padding-bottom: 50px;
-    }
+    background: #f2f7fd;
   }
   .cta.cta-two {
     background: url(../images/media-bg-3.png) no-repeat !important;
